# attitudes

./: Cargo.toml  README.md
src/: decode.rs  emoticons.rs  main.rs
