[package]
name = "attitudes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
clap = { version = "4.3.19", features = ["derive", "cargo"] }
clipboard = "0.5.0"
confy = "0.5.1"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
