[package]
name = "attitudes"
description = "A CLI tool to help you express emotions at the press of a button"
version = "1.0.0"
edition = "2021"
authors = ["Lucy Gschwantner lucygschwantner@gmail.com"]
license = "MIT"
repository = "https://github.com/jackboxx/attitudes"
readme = "README.md"
keywords = ["emoticons", "cli"]
categories = ["command-line-interface"]

[[bin]]
name = "attitudes"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.72"
base64 = "0.21.2"
bincode = "1.3.3"
clap = { version = "4.3.19", features = ["derive", "cargo"] }
clipboard = "0.5.0"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
toml = "0.7.6"
